Fix use of QAxFactory with QT_NO_CAST_FROM_ASCII defined

When QT_NO_CAST_FROM_ASCII is defined, including QAxFactory causes
compilation error because of passing char pointer directly to QString
constructor. Since the char pointer points to C++ class name, construct
QLatin1String instead to resolve encoding ambiguity.

Task-number: QTBUG-50182
Change-Id: I2e815078155e6de509f3f1220fa449f605cccefe
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>